# MTRESS

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  requirements.txt
.gitlab/issue_templates/: bug.md  default.md  enhancement.md
.gitlab/merge_request_templates/: default.md
examples/: test.yaml
examples/basic_examples/: boiler.py  connecting_location.py  electrolyser.py  gas_heat_simple.py  second_location_pv.py  specify_heat_penalties.py
examples/electricity_heat/: electricity_heat.py  simple_heat.py
examples/electricity_only/: electricity_only.py  electricity_pv.py
examples/gas_electricity/: chp.py  gas_electricity.py  gas_grid.py
examples/hydrogen/: hydrogen_plant.py  hydrogen_production.py  offset_electrolyser.py
examples/tutorial/: 1_heat_exchanger.py  2_heat_source_and_demand.py  3_heat_pump.py
mtress/: _abstract_component.py  _location.py  _solph_model.py
mtress/_helpers/: _visualization.py
mtress/carriers/: _abstract_carrier.py  _gas.py
mtress/technologies/: __init__.py  _boiler.py  _electrolyser.py  _fuel_cell.py  _gas_boiler.py  _heater.py
mtress/technologies/_heat_storage/: _multi_layer_storage.py
mtress/technologies/grid_connection/: _electricity.py  _gas.py
src/mtress/: __init__.py  _abstract_component.py  _data_handler.py  _interfaces.py  _location.py  _meta_model.py  _oemof_storage_multiplexer.py  _run_mtress.py  _solph_model.py
src/mtress/_helpers/: _results.py  _util.py  (+1 more)
tests/integration_tests/: test_layered_heat_demand.py
tests/unit_tests/: test_data_handler.py  test_meta_model.py  test_solph_model.py
(+36 files in other folders)
